# FindPaper

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  downloader.py  job_runner.py  llm_client.py  main.py  models.py  reports.py  scoring.py  search_clients.py  topic_extraction.py  utils.py
app/static/: app.js  index.html  styles.css
tests/: test_downloader.py  test_llm_client.py  test_scoring.py  test_search_clients.py  test_topic_extraction.py  test_utils.py
